--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            July 19th 2020, 11:47:37 am
+                            July 19th 2020, 12:11:25 pm
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
