--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            September 27th 2020, 5:35:50 pm
+                            October 1st 2020, 4:12:48 pm
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
