--- a/npm-audit.html
+++ b/npm-audit.html
@@ -55,7 +55,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
-                            October 20th 2020, 5:49:15 pm
+                            October 24th 2020, 11:48:18 am
                         </h5>
                         <p class="card-text">Last updated</p>
                     </div>
